--- a/index.html
+++ b/index.html
@@ -110,58 +110,30 @@
 
               <div class="tab-pane fade show active py-5" id="v-pills-1" role="tabpanel" aria-labelledby="v-pills-1-tab">
                 <span class="icon mb-3 d-block flaticon-ideas"></span>
-                <h2 class="mb-4">Business Strategy</h2>
+                <h2 class="mb-4">Organic beer</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt iste dolores consequatur</p>
                 <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                <p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
               </div>
 
               <div class="tab-pane fade py-5" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-2-tab">
                 <span class="icon mb-3 d-block flaticon-flasks"></span>
-                <h2 class="mb-4">Research</h2>
+                <h2 class="mb-4">Non-alcoholic beer</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt iste dolores consequatur</p>
                 <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                <p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
               </div>
 
               <div class="tab-pane fade py-5" id="v-pills-3" role="tabpanel" aria-labelledby="v-pills-3-tab">
                 <span class="icon mb-3 d-block flaticon-analysis"></span>
-                <h2 class="mb-4">Data Analysis</h2>
+                <h2 class="mb-4">Our Container</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt iste dolores consequatur</p>
                 <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                <p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
               </div>
 
               <div class="tab-pane fade py-5" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
                 <span class="icon mb-3 d-block flaticon-web-design"></span>
-                <h2 class="mb-4">UI Design</h2>
+                <h2 class="mb-4">Custom branded beer</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt iste dolores consequatur</p>
                 <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                <p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
-              </div>
-
-              <div class="tab-pane fade py-5" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
-                <span class="icon mb-3 d-block flaticon-ux-design"></span>
-                <h2 class="mb-4">Ux Design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt iste dolores consequatur</p>
-                <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                <p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
-              </div>
-
-              <div class="tab-pane fade py-5" id="v-pills-5" role="tabpanel" aria-labelledby="v-pills-5-tab">
-                <span class="icon mb-3 d-block flaticon-innovation"></span>
-                <h2 class="mb-4">Technology</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt iste dolores consequatur</p>
-                <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                <p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
-              </div>
-
-              <div class="tab-pane fade py-5" id="v-pills-6" role="tabpanel" aria-labelledby="v-pills-6-tab">
-                <span class="icon mb-3 d-block flaticon-idea"></span>
-                <h2 class="mb-4">Creative Solution</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt iste dolores consequatur</p>
-                <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                <p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
               </div>
             </div>
           </div>
@@ -169,56 +141,11 @@
       </div>
     </section>
 
-    <section class="ftco-section-2 img" style="background-image: url(images/bg_3.jpg);">
-    	<div class="container">
-    		<div class="row d-md-flex justify-content-end">
-    			<div class="col-md-6">
-    				<div class="row">
-    					<div class="col-md-12">
-    						<a href="#" class="services-wrap ftco-animate">
-    							<div class="icon d-flex justify-content-center align-items-center">
-    								<span class="ion-ios-arrow-back"></span>
-    								<span class="ion-ios-arrow-forward"></span>
-    							</div>
-    							<h2>Market Research</h2>
-    							<p>Even the all-powerful Pointing has no control about the blind.</p>
-    						</a>
-    						<a href="#" class="services-wrap ftco-animate">
-    							<div class="icon d-flex justify-content-center align-items-center">
-    								<span class="ion-ios-arrow-back"></span>
-    								<span class="ion-ios-arrow-forward"></span>
-    							</div>
-    							<h2>Financial Services</h2>
-    							<p>Even the all-powerful Pointing has no control about the blind.</p>
-    						</a>
-    						<a href="#" class="services-wrap ftco-animate">
-    							<div class="icon d-flex justify-content-center align-items-center">
-    								<span class="ion-ios-arrow-back"></span>
-    								<span class="ion-ios-arrow-forward"></span>
-    							</div>
-    							<h2>Online Marketing</h2>
-    							<p>Even the all-powerful Pointing has no control about the blind.</p>
-    						</a>
-    						<a href="#" class="services-wrap ftco-animate">
-    							<div class="icon d-flex justify-content-center align-items-center">
-    								<span class="ion-ios-arrow-back"></span>
-    								<span class="ion-ios-arrow-forward"></span>
-    							</div>
-    							<h2>24/7 Help &amp; Support</h2>
-    							<p>Even the all-powerful Pointing has no control about the blind.</p>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
-    </section>
-
     <section class="ftco-section ftco-project bg-light" id="projects-section">
     	<div class="container px-md-5">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
-          	<span class="subheading">Accomplishments</span>
+          	<span class="subheading">#BeTheCompanion</span>
             <h2 class="mb-4">Our Projects</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
