--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
 	        <ul class="navbar-nav nav ml-auto">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
-	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
+	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Campaigns</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-	          <li class="nav-item"><a href="#testimony-section" class="nav-link"><span>Testimony</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -147,7 +146,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<span class="subheading">#BeTheCompanion</span>
             <h2 class="mb-4">Our Projects</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>Check in on our previous, ongoing and future campaigns</p>
           </div>
         </div>
     		<div class="row">
@@ -224,59 +223,26 @@
     		</div>
     	</div>
     </section>
-		
 
-		<section class="ftco-counter img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
-    	<div class="container">
-    		<div class="row d-flex">
-    			<div class="col-md-6 col-lg-5 d-flex">
-    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about.jpg);">
-    				</div>
-    			</div>
-    			<div class="col-md-6 col-lg-7 pl-lg-5 py-5">
-    				<div class="py-md-5">
-	    				<div class="row justify-content-start pb-3">
-			          <div class="col-md-12 heading-section ftco-animate">
-			          	<span class="subheading">Welcome to digilab</span>
-			            <h2 class="mb-4" style="font-size: 34px; text-transform: capitalize;">We Are Digital Agency</h2>
-			            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-			            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-			            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-			          </div>
-			        </div>
-		          <div class="counter-wrap ftco-animate d-flex mt-md-3">
-	              <div class="text p-4 bg-primary">
-	              	<p class="mb-0">
-		                <span class="number" data-number="20">0</span>
-		                <span>Years of experience</span>
-	                </p>
-	              </div>
-		          </div>
-		        </div>
-	        </div>
-        </div>
-    	</div>
-    </section>
-
-    <section class="ftco-section">
+    <section class="ftco-section" id="about-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-6 heading-section text-center ftco-animate">
           	<span class="subheading">About Us</span>
             <h2 class="mb-4">Our Staff</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>3 dudes making a beer brand over the span of 1,5 days</p>
           </div>
         </div>
         <div class="row">
-					<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="col-md-8 col-lg-4 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/staff-1.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(images/portrait-lazlo.jpg);"></div>
 							</div>
 							<div class="text d-flex align-items-center pt-3 text-center">
 								<div>
-									<h3 class="mb-2">Lloyd Wilson</h3>
-									<span class="position mb-4">CEO, Founder</span>
+									<h3 class="mb-2">Lazlo De Bock</h3>
+									<span class="position mb-4">3D Magician</span>
 									<div class="faded">
 										<ul class="ftco-social text-center">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -289,14 +255,14 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="col-md-8 col-lg-4 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/staff-2.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(images/portrait-simon.jpg);"></div>
 							</div>
 							<div class="text d-flex align-items-center pt-3 text-center">
 								<div>
-									<h3 class="mb-2">Rachel Parker</h3>
+									<h3 class="mb-2">Simon Aagaard</h3>
 									<span class="position mb-4">Web Designer</span>
 									<div class="faded">
 										<ul class="ftco-social text-center">
@@ -310,15 +276,15 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="col-md-8 col-lg-4 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/staff-3.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(images/portrait-jesper.jpg);"></div>
 							</div>
 							<div class="text d-flex align-items-center pt-3 text-center">
 								<div>
-									<h3 class="mb-2">Ian Smith</h3>
-									<span class="position mb-4">Web Developer</span>
+									<h3 class="mb-2">Jesper Henriksen</h3>
+									<span class="position mb-4">Brew GrandMaster</span>
 									<div class="faded">
 										<ul class="ftco-social text-center">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
