--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav nav ml-auto">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
-	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
+	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Products</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Campaigns</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
@@ -155,7 +155,7 @@
             	<div class="item">
             		<div class="project">
 		    					<div class="img">
-				    				<img src="images/project-1.jpg" class="img-fluid" alt="Colorlib Template">
+				    				<img src="images/carousel-6.jpg" class="img-fluid" alt="Colorlib Template">
 				    				<div class="text px-4">
 				    					<h3><a href="#">Work Name</a></h3>
 				    					<span>Web Design</span>
@@ -166,7 +166,7 @@
             	<div class="item">
             		<div class="project">
 		    					<div class="img">
-				    				<img src="images/project-2.jpg" class="img-fluid" alt="Colorlib Template">
+				    				<img src="images/carousel-1.jpg" class="img-fluid" alt="Colorlib Template">
 				    				<div class="text px-4">
 				    					<h3><a href="#">Work Name</a></h3>
 				    					<span>Web Design</span>
@@ -177,7 +177,7 @@
             	<div class="item">
             		<div class="project">
 		    					<div class="img">
-				    				<img src="images/project-3.jpg" class="img-fluid" alt="Colorlib Template">
+				    				<img src="images/carousel-2.jpg" class="img-fluid" alt="Colorlib Template">
 				    				<div class="text px-4">
 				    					<h3><a href="#">Work Name</a></h3>
 				    					<span>Web Design</span>
@@ -188,7 +188,7 @@
             	<div class="item">
             		<div class="project">
 		    					<div class="img">
-				    				<img src="images/project-4.jpg" class="img-fluid" alt="Colorlib Template">
+				    				<img src="images/carousel-3.jpg" class="img-fluid" alt="Colorlib Template">
 				    				<div class="text px-4">
 				    					<h3><a href="#">Work Name</a></h3>
 				    					<span>Web Design</span>
@@ -199,7 +199,7 @@
             	<div class="item">
             		<div class="project">
 		    					<div class="img">
-				    				<img src="images/project-5.jpg" class="img-fluid" alt="Colorlib Template">
+				    				<img src="images/carousel-4.jpg" class="img-fluid" alt="Colorlib Template">
 				    				<div class="text px-4">
 				    					<h3><a href="#">Work Name</a></h3>
 				    					<span>Web Design</span>
@@ -210,7 +210,7 @@
             	<div class="item">
             		<div class="project">
 		    					<div class="img">
-				    				<img src="images/project-6.jpg" class="img-fluid" alt="Colorlib Template">
+				    				<img src="images/carousel-5.jpg" class="img-fluid" alt="Colorlib Template">
 				    				<div class="text px-4">
 				    					<h3><a href="#">Work Name</a></h3>
 				    					<span>Web Design</span>
@@ -242,7 +242,7 @@
 							<div class="text d-flex align-items-center pt-3 text-center">
 								<div>
 									<h3 class="mb-2">Lazlo De Bock</h3>
-									<span class="position mb-4">3D Magician</span>
+									<span class="position mb-4">The Magician</span>
 									<div class="faded">
 										<ul class="ftco-social text-center">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -391,10 +391,6 @@
         </div>
         <div class="row">
           <div class="col-md-12 text-center">
-
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
       </div>
