--- a/index.html
+++ b/index.html
@@ -155,8 +155,9 @@
 		    					<div class="img">
 				    				<img src="images/carousel-6.jpg" class="img-fluid" alt="Colorlib Template">
 				    				<div class="text px-4">
-				    					<h3><a href="#">Work Name</a></h3>
-				    					<span>Web Design</span>
+				    					<h3><a href="#">Cathy3121</a></h3>
+											<span>Enjoying the Antwerp sunshine with friends! <br>
+												#BeTheCompanion #Beers #Friends #TheBobIsReady</span>
 				    				</div>
 			    				</div>
 		    				</div>
@@ -166,8 +167,9 @@
 		    					<div class="img">
 				    				<img src="images/carousel-1.jpg" class="img-fluid" alt="Colorlib Template">
 				    				<div class="text px-4">
-				    					<h3><a href="#">Work Name</a></h3>
-				    					<span>Web Design</span>
+				    					<h3><a href="#">PeteLoves</a></h3>
+											<span>Coworkers know how to have fun during lunchbreak without alcohol.<br>
+											#BeTheCompanion #Beers #coworkerFun #TheBobIsReady</span>
 				    				</div>
 			    				</div>
 		    				</div>
@@ -177,8 +179,8 @@
 		    					<div class="img">
 				    				<img src="images/carousel-2.jpg" class="img-fluid" alt="Colorlib Template">
 				    				<div class="text px-4">
-				    					<h3><a href="#">Work Name</a></h3>
-				    					<span>Web Design</span>
+				    					<h3><a href="#">LongJohnSilver</a></h3>
+				    					<span>Now we can both have a beer on our adventures. Thank you #BeTheCompanion for introducing #TheBobBeer</span>
 				    				</div>
 			    				</div>
 		    				</div>
@@ -188,8 +190,8 @@
 		    					<div class="img">
 				    				<img src="images/carousel-3.jpg" class="img-fluid" alt="Colorlib Template">
 				    				<div class="text px-4">
-				    					<h3><a href="#">Work Name</a></h3>
-				    					<span>Web Design</span>
+				    					<h3><a href="#">Paul McCartney</a></h3>
+				    					<span>Is the red dress and the smile or the beer the best in this picture? #BeTheCompanion #DecisionTime</span>
 				    				</div>
 			    				</div>
 		    				</div>
@@ -199,8 +201,8 @@
 		    					<div class="img">
 				    				<img src="images/carousel-4.jpg" class="img-fluid" alt="Colorlib Template">
 				    				<div class="text px-4">
-				    					<h3><a href="#">Work Name</a></h3>
-				    					<span>Web Design</span>
+				    					<h3><a href="#">George Clooney</a></h3>
+				    					<span>Can you believe they wouldn't let me order a single beer? #CrazyBelgians #BeTheCompanion #CompanionWhatElse</span>
 				    				</div>
 			    				</div>
 		    				</div>
@@ -210,8 +212,8 @@
 		    					<div class="img">
 				    				<img src="images/carousel-5.jpg" class="img-fluid" alt="Colorlib Template">
 				    				<div class="text px-4">
-				    					<h3><a href="#">Work Name</a></h3>
-				    					<span>Web Design</span>
+				    					<h3><a href="#">Julia Roberts</a></h3>
+				    					<span>Finally some time off the set for a #BeTheCompanion</span>
 				    				</div>
 			    				</div>
 		    				</div>
