final stuff added

--- a/index.html
+++ b/index.html
@@ -352,11 +352,11 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Organic</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Non-alcoholic</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>The container</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+                <li><a href="##projects-section"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
+                <li><a href="##projects-section"><span class="icon-long-arrow-right mr-2"></span>Organic</a></li>
+                <li><a href="##projects-section"><span class="icon-long-arrow-right mr-2"></span>Non-alcoholic</a></li>
+                <li><a href="##projects-section"><span class="icon-long-arrow-right mr-2"></span>The container</a></li>
+                <li><a href="#contact-section"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
               </ul>
             </div>
           </div>
